-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Security, Testing Infrastructure
-
None
-
Minor Change
-
OS X
-
v4.0
-
-
Platforms 2018-07-02
-
46
-
None
-
None
-
None
-
None
-
None
-
None
-
None
As described in BF-9546, there is an automatic build failure when running the ssl_client_certificate_warning.js test. This is a result of our OSX SSL manager giving different log messages than the other SSL managers.
Because of this behavior, the test case is fooled into thinking a log message is not printed, when it actually is, because it is not looking for the right log message. This will be fixed by changing the OSX log message to be consistent with the others.
The current message, used in ssl_manager_apple.cpp is:
return badCert(str::stream() << "Unable to retreive SSL trust from peer: " << stringFromOSStatus(status)
This will be changed to:
return badCert(str::stream() << "no SSL certificate provided by peer: " << stringFromOSStatus(status)
which will make it consistent with the other SSL managers