SERVER-35781 Fix BF related to log message in OSX SSL manager